--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a class="logo" href="https://www.aicte-india.org/" target="_blank">AICTE</a>
             <ul>
                 <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="https://www.google.com" target="_blank">National</a></li>
+                <li><a href="Navbars/Basic_Navbar/basicNav.html" target="_blank">National</a></li>
                 <li><a href="https://www.google.com" target="_blank">International</a></li>
                 <li><a href="https://www.google.com" target="_blank">Add Grant</a></li>
                 <li><a href="https://www.google.com" target="_blank">Contact</a></li>
