Implemented Dropdown Navbar

--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
             <a class="logo" href="https://www.aicte-india.org/" target="_blank">AICTE</a>
             <ul>
                 <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="Navbars/Basic_Navbar/basicNav.html" target="_blank">National</a></li>
-                <li><a href="https://www.google.com" target="_blank">International</a></li>
+                <li class="dropdown">
+                    <a href="https://www.google.com" target="_blank">National</a>
+                    <div class="dropdown-content">
+                        <a href="#">Subject 1</a>
+                        <a href="#">Subject 2</a>
+                        <a href="#">Subject 3</a>
+                    </div>
+                </li>
+                <li class="dropdown">
+                    <a href="https://www.google.com" target="_blank">International</a>
+                    <div class="dropdown-content">
+                        <a href="#">Subject 1</a>
+                        <a href="#">Subject 2</a>
+                        <a href="#">Subject 3</a>
+                    </div>
+                </li>
                 <li><a href="https://www.google.com" target="_blank">Add Grant</a></li>
                 <li><a href="https://www.google.com" target="_blank">Contact</a></li>
                 <li><a href="https://www.google.com" target="_blank">Feedback</a></li>
