--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,12 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <header>
         <nav>
             <input type="checkbox" id="check">
-            <label for="check" class="checkbtn"> 
+            <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
             </label>
             <a class="logo" href="https://www.aicte-india.org/" target="_blank">AICTE</a>
@@ -40,5 +42,19 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section>
+
+        </section>
+        <article>
+
+        </article>
+        <aside>
+            
+        </aside>
+    </main>
+
 </body>
+
 </html>
