--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Research Grants</title>
+    <title>Research Grants searching site</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
 </head>
@@ -17,11 +17,11 @@
             <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
             </label>
-            <a class="logo" href="https://www.aicte-india.org/" target="_blank">AICTE</a>
+            <a class="logo" href="#">AICTE</a>
             <ul>
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a class="active" href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="https://www.google.com" target="_blank">National</a>
+                    <a href="#">National</a>
                     <div class="dropdown-content">
                         <a href="#">Subject 1</a>
                         <a href="#">Subject 2</a>
@@ -29,23 +29,23 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a href="https://www.google.com" target="_blank">International</a>
+                    <a href="#">International</a>
                     <div class="dropdown-content">
                         <a href="#">Subject 1</a>
                         <a href="#">Subject 2</a>
                         <a href="#">Subject 3</a>
                     </div>
                 </li>
-                <li><a href="https://www.google.com" target="_blank">Add Grant</a></li>
-                <li><a href="https://www.google.com" target="_blank">Contact</a></li>
-                <li><a href="https://www.google.com" target="_blank">Feedback</a></li>
+                <li><a href="#">Add Grant</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Feedback</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section>
-
+            This is HOME PAGE of Research Grants searching site
         </section>
         <article>
 
