--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main>
         <section>
 
-            <div>
+            <div class="current">
                 <h1>CURRENT OPPORTUNITIES</h1>
             </div>
 
