--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
     <main>
         <section>
 
-            <div class="current">
-                <h1>CURRENT OPPORTUNITIES</h1>
-            </div>
+            <h1 class="current">CURRENT OPPORTUNITIES</h1>
 
             <!-- Slideshow container -->
             <div class="slideshow-container">
@@ -83,13 +81,14 @@
                 <a class="next1" onclick="plusSlides(1)">&#10095;</a>
             </div>
             <br>
-        </section>
-        <article>
 
-        </article>
-        <aside>
-            
-        </aside>
+            <!-- The dots/circles -->
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+        </section>
     </main>
 
 </body>
