--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Research Grants searching site</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -50,7 +51,7 @@
     <main>
         <section>
 
-            <h1 class="current">CURRENT OPPORTUNITIES</h1>
+            <h1>CURRENT OPPORTUNITIES</h1>
 
             <!-- Slideshow container -->
             <div class="slideshow-container">
@@ -88,9 +89,68 @@
                 <span class="dot" onclick="currentSlide(2)"></span>
                 <span class="dot" onclick="currentSlide(3)"></span>
             </div>
+
+            <h1>National Grants</h1>
+            <div class="container-2">
+                <img src="img/img4.jpg" alt="This sample picture" width="100%" height="200px">
+            </div>
+
+            <h1>International Grants</h1>
+            <div class="container-2">
+                <img src="img/img4.jpg" alt="This sample picture" width="100%" height="200px">
+            </div>
         </section>
     </main>
 
+	<footer id="footer">
+
+		<!-- Company Details -->
+		<!-- 1. Address
+		2. Contact Number
+		3. Enquiry Mail
+	-->
+		<div class="company-details">
+			<div class="row">
+				<div id="col1">
+					<span id="icon" class="fa fa-map-marker"></span>
+					<span>
+                        46-969, Bhagath Singh Nagar,
+                        <br />Chintal, Hyderabad
+                    </span>
+				</div>
+
+				<div id="col2">
+					<span id="icon" class="fa fa-phone"></span>
+					<span>
+                        Telephone: +91-7093******
+                    </span>
+				</div>
+
+				<div id="col3">
+					<span id="icon" class="fa fa-envelope"></span>
+					<span>xyz@kvenkatamar.org</span>
+				</div>
+			</div>
+		</div>
+
+		<!-- Copyright Section -->
+		<div class="copyright">
+            <p>© All rights reserved | kvenkatamar.</p>
+			<ul class="contact">
+				<li>
+					<a href="#" class="fa fa-twitter"></a>
+				</li>
+
+				<li>
+					<a href="#" class="fa fa-facebook"></a>
+				</li>
+
+				<li>
+					<a href="#" class="fa fa-pinterest-p"></a>
+				</li>
+			</ul>
+		</div>
+    </footer>
 </body>
 
 <script src="app.js"></script>
