--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Research Grants searching site</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -100,57 +99,39 @@
                 <img src="img/img4.jpg" alt="This sample picture" width="100%" height="200px">
             </div>
         </section>
+        <footer id="footer">
+            <div class="contact">
+                <div class="col">
+                    <h3>CONTACT US</h3>
+                    <div id="row1">
+                        <i id="icon" class="fa-solid fa-square-phone"></i>
+                        <span>
+                            Telephone: +91-7093686019
+                        </span>
+                    </div>
+                    <div id="row2">
+                        <span id="icon" class="fa fa-envelope"></span>
+                        <span>kvenkatamar123@gmail.com</span>
+                    </div>
+                </div>
+            </div>
+            <div class="follow">
+                <ul>
+                    <h3>FOLLOW US</h3>
+                    <li>
+                        <i class="fa-brands fa-facebook-f" id="fb"></i>
+                    </li>
+                    <li>
+                        <img src="img/insta.png" alt="Insta" id="insta">
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-twitter" id="tweet"></i>
+                    </li>
+                </ul>
+            </div>
+            <p class="copyright">Copyright ©  2022 - kvenkatamar. All Rights Reserved</p>
+        </footer>
     </main>
-
-	<footer id="footer">
-
-		<!-- Company Details -->
-		<!-- 1. Address
-		2. Contact Number
-		3. Enquiry Mail
-	-->
-		<div class="company-details">
-			<div class="row">
-				<div id="col1">
-					<span id="icon" class="fa fa-map-marker"></span>
-					<span>
-                        46-969, Bhagath Singh Nagar,
-                        <br />Chintal, Hyderabad
-                    </span>
-				</div>
-
-				<div id="col2">
-					<span id="icon" class="fa fa-phone"></span>
-					<span>
-                        Telephone: +91-7093******
-                    </span>
-				</div>
-
-				<div id="col3">
-					<span id="icon" class="fa fa-envelope"></span>
-					<span>xyz@kvenkatamar.org</span>
-				</div>
-			</div>
-		</div>
-
-		<!-- Copyright Section -->
-		<div class="copyright">
-            <p>© All rights reserved | kvenkatamar.</p>
-			<ul class="contact">
-				<li>
-					<a href="#" class="fa fa-twitter"></a>
-				</li>
-
-				<li>
-					<a href="#" class="fa fa-facebook"></a>
-				</li>
-
-				<li>
-					<a href="#" class="fa fa-pinterest-p"></a>
-				</li>
-			</ul>
-		</div>
-    </footer>
 </body>
 
 <script src="app.js"></script>
@@ -159,3 +140,48 @@
 
 <!---------------------------------SLIDESHOW / CAROUSEL-------------------------------------->
 <!-- https://www.w3schools.com/howto/howto_js_slideshow.asp -->
+
+<!---------------------------------FOOTER-------------------------------------->
+
+
+<!-- 
+<footer id="footer">
+
+    Company Details
+    1. Contact Number
+    2. Enquiry Mail
+    
+    <div class="contact">
+        <div class="col">
+            <h3>CONTACT US</h3>
+            <div id="row1">
+                <span id="icon" class="fa fa-phone"></span>
+                <span>
+                    Telephone: +91-7093686019
+                </span>
+            </div>
+            <div id="row2">
+                <span id="icon" class="fa fa-envelope"></span>
+                <span>xyz@kvenkatamar.org</span>
+            </div>
+        </div>
+    </div>
+
+    Copyright Section
+    <div class="follow">
+        <ul>
+            <h3>FOLLOW US</h3>
+            <li>
+                <i class="fa-brands fa-facebook-f fb"></i>
+            </li>
+            <li>
+                <img class="fa-brands fa-instagram insta" src="img/insta.png" alt="Insta" width="40px">
+            </li>
+            <li>
+                <i class="fa-brands fa-twitter tweet"></i>
+                <a href="#" class="fa fa-twitter social-media"></a>
+            </li>
+        </ul>
+    </div>
+    <p class="copyright">© Copyright 2022 Grants World. All Rights Reserved</p>
+</footer> -->
