--- a/index.html
+++ b/index.html
@@ -23,17 +23,25 @@
                 <li class="dropdown">
                     <a href="#">National</a>
                     <div class="dropdown-content">
-                        <a href="#">Subject 1</a>
-                        <a href="#">Subject 2</a>
-                        <a href="#">Subject 3</a>
+                        <a href="#">Physics</a>
+                        <a href="#">Mathematics</a>
+                        <a href="#">Botony</a>
+                        <a href="#">zoology</a>
+                        <a href="#">human psychology</a>
+                        <a href="#">History</a>
+                        <a href="#">Astronomy</a>
                     </div>
                 </li>
                 <li class="dropdown">
                     <a href="#">International</a>
                     <div class="dropdown-content">
-                        <a href="#">Subject 1</a>
-                        <a href="#">Subject 2</a>
-                        <a href="#">Subject 3</a>
+                        <a href="#">Physics</a>
+                        <a href="#">Mathematics</a>
+                        <a href="#">Botony</a>
+                        <a href="#">zoology</a>
+                        <a href="#">human psychology</a>
+                        <a href="#">History</a>
+                        <a href="#">Astronomy</a>
                     </div>
                 </li>
                 <li><a href="#">Add Grant</a></li>
