--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <title>Research Grants searching site</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 </head>
 
 <body>
     <header>
-        <nav>
+        <nav class="navbar">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
@@ -54,6 +55,7 @@
             </ul>
         </nav>
     </header>
+
 
     <main>
         <section>
@@ -98,15 +100,39 @@
             </div>
 
             <h1>National Grants</h1>
-            <div class="container-2">
-                <img src="img/img4.jpg" alt="This sample picture" width="100%" height="200px">
-            </div>
+            <!-- <div class="slick-slider-1">
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="details">
+                            <h2>heading</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, quia aspernatur itaque nulla autem enim alias sunt? Doloremque consectetur, consequuntur nostrum error soluta iusto numquam facilis, accusamus labore eius, recusandae eaque pariatur assumenda iure necessitatibus illum! Nostrum quae sit dignissimos animi incidunt non earum saepe enim, aspernatur, quidem vel numquam?</p>
+                            <a href="#">read more</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="details">
+                            <h2>heading</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, quia aspernatur itaque nulla autem enim alias sunt? Doloremque consectetur, consequuntur nostrum error soluta iusto numquam facilis, accusamus labore eius, recusandae eaque pariatur assumenda iure necessitatibus illum! Nostrum quae sit dignissimos animi incidunt non earum saepe enim, aspernatur, quidem vel numquam?</p>
+                            <a href="#">read more</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="details">
+                            <h2>heading</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus, quia aspernatur itaque nulla autem enim alias sunt? Doloremque consectetur, consequuntur nostrum error soluta iusto numquam facilis, accusamus labore eius, recusandae eaque pariatur assumenda iure necessitatibus illum! Nostrum quae sit dignissimos animi incidunt non earum saepe enim, aspernatur, quidem vel numquam?</p>
+                            <a href="#">read more</a>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
 
             <h1>International Grants</h1>
-            <div class="container-2">
-                <img src="img/img4.jpg" alt="This sample picture" width="100%" height="200px">
+            <div class="slick-slider-2">
+                
             </div>
         </section>
+
+
         <footer id="footer">
             <div class="contact">
                 <div class="col">
