--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             <ul>
                 <li><a class="active" href="#">Home</a></li>
                 <li class="dropdown">
-                    <a href="#">National</a>
+                    <a href="#">National
+                        <i class="fa fa-caret-down"></i>
+                    </a>
                     <div class="dropdown-content">
                         <a href="#">Physics</a>
                         <a href="#">Mathematics</a>
@@ -34,7 +36,9 @@
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a href="#">International</a>
+                    <a href="#">International
+                        <i class="fa fa-caret-down"></i>
+                    </a>
                     <div class="dropdown-content">
                         <a href="#">Physics</a>
                         <a href="#">Mathematics</a>
