--- a/Subject-wise/subject.html
+++ b/Subject-wise/subject.html
@@ -18,25 +18,11 @@
             <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
             </label>
-            <a class="logo" href="/index.html">AICTE</a>
+            <a class="logo" href="../index.html">AICTE</a>
             <ul>
-                <li><a class="active" href="/index.html">Home</a></li>
+                <li><a class="active" href="../index.html">Home</a></li>
                 <li class="dropdown">
-                    <a href="/National/national.html">National
-                        <i class="fa fa-caret-down"></i>
-                    </a>
-                    <div class="dropdown-content">
-                        <a href="subject.html">Mathematics</a>
-                        <a href="subject.html">Physics</a>
-                        <a href="subject.html">Botony</a>
-                        <a href="subject.html">zoology</a>
-                        <a href="subject.html">human psychology</a>
-                        <a href="subject.html">History</a>
-                        <a href="subject.html">Astronomy</a>
-                    </div>
-                </li>
-                <li class="dropdown">
-                    <a href="/International/international.html">International
+                    <a href="../National/national.html">National
                         <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content">
@@ -49,9 +35,23 @@
                         <a href="subject.html">Astronomy</a>
                     </div>
                 </li>
-                <li><a href="/Add_New_Grant/new.html">Add Grant</a></li>
-                <li><a href="/Contact/contact.html">Contact</a></li>
-                <li><a href="/Feedback/feedback.html">Feedback</a></li>
+                <li class="dropdown">
+                    <a href="../International/international.html">International
+                        <i class="fa fa-caret-down"></i>
+                    </a>
+                    <div class="dropdown-content">
+                        <a href="subject.html">Physics</a>
+                        <a href="subject.html">Mathematics</a>
+                        <a href="subject.html">Botony</a>
+                        <a href="subject.html">zoology</a>
+                        <a href="subject.html">human psychology</a>
+                        <a href="subject.html">History</a>
+                        <a href="subject.html">Astronomy</a>
+                    </div>
+                </li>
+                <li><a href="../Add_New_Grant/new.html">Add Grant</a></li>
+                <li><a href="../Contact/contact.html">Contact</a></li>
+                <li><a href="../Feedback/feedback.html">Feedback</a></li>
                 <li class="search-container">
                     <input type="text" placeholder="Search your Grant" name="search">
                     <button type="button"><i class="fa-solid fa-search"></i></button>
@@ -62,7 +62,7 @@
 
     <main>
         <section>
-            <h1>SUBJECT-XYZ RESEARCH GRANTS</h1>
+            <h1>Subect xyz Research Grants</h1>
         </section>
     </main>
 
@@ -89,7 +89,7 @@
                     <i class="fa-brands fa-facebook-f" id="fb"></i>
                 </li>
                 <li>
-                    <img src="/img/insta.png" alt="Insta" id="insta">
+                    <img src="../img/insta.png" alt="Insta" id="insta">
                 </li>
                 <li>
                     <i class="fa-brands fa-twitter" id="tweet"></i>
