--- a/Add_New_Grant/new.html
+++ b/Add_New_Grant/new.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="../same.css">
 </head>
 
-<main>
+<body>
     <header>
         <nav class="navbar">
             <input type="checkbox" id="check">
