--- a/index.html
+++ b/index.html
@@ -7,228 +7,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research Grants searching site</title>
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
-    <!-- Slick Slider Libraries -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <!-- Styling Sheets -->
-    <link rel="stylesheet" href="header_footer.css">
+    <!-- Slick Slider -->
+    <link rel="stylesheet" href="./slick-slider/css/slick.css">
+    <link rel="stylesheet" href="./slick-slider/css/slick-theme.css">
+    <link rel="stylesheet" href="same.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<main>
+<body>
     <header>
-        <div class="navbar">
+        <nav class="navbar">
             <input type="checkbox" id="check">
             <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
             </label>
-            <a class="logo" href="index.html">AICTE</a>
+            <a class="logo" href="../index.html">AICTE</a>
             <ul>
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a class="active" href="../index.html">Home</a></li>
                 <li class="dropdown">
-                    <a href="National/national.html">National
+                    <a href="../National/national.html">National
                         <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content">
-                        <a href="Subject-wise/subject.html">Physics</a>
-                        <a href="Subject-wise/subject.html">Mathematics</a>
-                        <a href="Subject-wise/subject.html">Botony</a>
-                        <a href="Subject-wise/subject.html">zoology</a>
-                        <a href="Subject-wise/subject.html">human psychology</a>
-                        <a href="Subject-wise/subject.html">History</a>
-                        <a href="Subject-wise/subject.html">Astronomy</a>
+                        <a href="../Subject-wise/subject.html">Physics</a>
+                        <a href="../Subject-wise/subject.html">Mathematics</a>
+                        <a href="../Subject-wise/subject.html">Botony</a>
+                        <a href="../Subject-wise/subject.html">zoology</a>
+                        <a href="../Subject-wise/subject.html">human psychology</a>
+                        <a href="../Subject-wise/subject.html">History</a>
+                        <a href="../Subject-wise/subject.html">Astronomy</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a href="International/international.html">International
+                    <a href="../International/international.html">International
                         <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content">
-                        <a href="Subject-wise/subject.html">Physics</a>
-                        <a href="Subject-wise/subject.html">Mathematics</a>
-                        <a href="Subject-wise/subject.html">Botony</a>
-                        <a href="Subject-wise/subject.html">zoology</a>
-                        <a href="Subject-wise/subject.html">human psychology</a>
-                        <a href="Subject-wise/subject.html">History</a>
-                        <a href="Subject-wise/subject.html">Astronomy</a>
+                        <a href="../Subject-wise/subject.html">Physics</a>
+                        <a href="../Subject-wise/subject.html">Mathematics</a>
+                        <a href="../Subject-wise/subject.html">Botony</a>
+                        <a href="../Subject-wise/subject.html">zoology</a>
+                        <a href="../Subject-wise/subject.html">human psychology</a>
+                        <a href="../Subject-wise/subject.html">History</a>
+                        <a href="../Subject-wise/subject.html">Astronomy</a>
                     </div>
                 </li>
-                <li><a href="Add_New_Grant/new.html">Add Grant</a></li>
-                <li><a href="Contact/contact.html">Contact</a></li>
-                <li><a href="Feedback/feedback.html">Feedback</a></li>
+                <li><a href="new.html">Add Grant</a></li>
+                <li><a href="../Contact/contact.html">Contact</a></li>
+                <li><a href="../Feedback/feedback.html">Feedback</a></li>
                 <li class="search-container">
                     <input type="text" placeholder="Search your Grant" name="search">
-                    <button type="button" class="button"><i class="fa-solid fa-search"></i></button>
+                    <button type="button"><i class="fa-solid fa-search"></i></button>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
-
     <main>
         <section>
-
-            <h1>CURRENT OPPORTUNITIES</h1>
-
-            <!-- Slideshow container -->
-            <div class="slideshow-container">
-
-                <!-- Full-width images with number and caption text -->
-                <div class="mySlides fade">
-                    <div class="numbertext">1 / 3</div>
-                    <img src="img/img1.jpg" style="width: 100%; height: 400px;">
-                    <div class="text">Caption One</div>
-                </div>
-
-                <div class="mySlides fade">
-                    <div class="numbertext">2 / 3</div>
-                    <img src="img/img2.jpg" style="width: 100%; height: 400px;">
-                    <div class="text">Caption Two</div>
-                </div>
-
-                <div class="mySlides fade">
-                    <div class="numbertext">3 / 3</div>
-                    <img src="img/img3.jpg" style="width: 100%; height: 400px;">
-                    <div class="text">Caption Three</div>
-                </div>
-
-                <!-- Next and previous buttons -->
-                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-                <a class="next" onclick="plusSlides(1)">&#10095;</a>
-            </div>
-            <br>
-
-            <!-- The dots/circles -->
-            <div style="text-align:center">
-                <span class="dot" onclick="currentSlide(1)"></span>
-                <span class="dot" onclick="currentSlide(2)"></span>
-                <span class="dot" onclick="currentSlide(3)"></span>
-            </div>
-
-            <h1>National Grants</h1>
-            <div class="container">
-                <div class="row slider">
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+            <div class="container-1">
+                <div class="wrapper">
+                    <div class="main-slider">
+                        <div class="slider__item">
+                            <img src="img/img1.jpg" alt="">
                         </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+                        <div class="slider__item">
+                            <img src="img/img2.jpg" alt="">
                         </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+                        <div class="slider__item">
+                            <img src="img/img3.jpg" alt="">
                         </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
-                        </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+                        <div class="slider__item">
+                            <img src="img/img4.jpg" alt="">
                         </div>
                     </div>
                 </div>
             </div>
-            <h1>International Grants</h1>
-            <div class="container">
-                <div class="row slider">
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+            <div class="container-2">
+                <h1>National Grants</h1>
+                <div class="wrapper">
+                    <div class="slider">
+                        <div class="slider__item">
+                            <h2>Physics</h2>
+                        </div>
+                        <div class="slider__item">
+                            <h2>Mathematics</h2>
+                        </div>
+                        <div class="slider__item">
+                            <h2>Botony</h2>
+                        </div>
+                        <div class="slider__item">
+                            <h2>zoology</h2>
+                        </div>
+                        <div class="slider__item">
+                            <h2>Psychology</h2>
+                        </div>
+                        <div class="slider__item">
+                            <h2>History</h2>
+                        </div>
+                        <div class="slider__item">
+                            <h2>Astronomy</h2>
                         </div>
                     </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+                </div>
+            </div>
+            <div class="container-2">
+                <h1>International Grants</h1>
+                <div class="wrapper">
+                    <div class="slider">
+                        <div class="slider__item">
+                            <h2>Physics</h2>
+                            <img src="" alt="physics">
                         </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+                        <div class="slider__item">
+                            <h2>Mathematics</h2>
                         </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+                        <div class="slider__item">
+                            <h2>Botony</h2>
                         </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+                        <div class="slider__item">
+                            <h2>zoology</h2>
                         </div>
-                    </div>
-
-                    <div class="col-md-12">
-                        <div class="details">
-                            <h2>heading</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cumque reiciendis
-                                ipsa assumenda ipsam ad nam, nobis, et accusantium recusandae impedit. Aliquam eaque
-                                itaque dignissimos consequatur sunt commodi atque alias?</p>
-                            <a href="#">read more</a>
+                        <div class="slider__item">
+                            <h2>Psychology</h2>
+                        </div>
+                        <div class="slider__item">
+                            <h2>History</h2>
+                        </div>
+                        <div class="slider__item">
+                            <h2>Astronomy</h2>
                         </div>
                     </div>
                 </div>
@@ -259,7 +165,7 @@
                     <i class="fa-brands fa-facebook-f" id="fb"></i>
                 </li>
                 <li>
-                    <img src="img/insta.png" alt="Insta" id="insta">
+                    <img src="../img/insta.png" alt="Insta" id="insta">
                 </li>
                 <li>
                     <i class="fa-brands fa-twitter" id="tweet"></i>
@@ -267,27 +173,14 @@
             </ul>
         </div>
         <div class="copyright">
-            <p>Copyright © 2022 - kvenkatamar. All Rights Reserved</p>
+            <p>Copyright ©  2022 - kvenkatamar. All Rights Reserved</p>
         </div>
     </footer>
-    </body>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+    <script src="./slick-slider/js/slick.js" type="text/javascript"></script>
     <script src="app.js"></script>
 
+</body>
+
 </html>
-
-<!---------------------------------SLIDESHOW / CAROUSEL-------------------------------------->
-
-<!-- https://www.w3schools.com/howto/howto_js_slideshow.asp -->
-
-<!---------------------------------SLICK SLIDER-------------------------------------->
-
-<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
---------BODY END-----------
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="app.js"></script> -->
