--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <i class="fa-brands fa-facebook-f" id="fb"></i>
                 </li>
                 <li>
-                    <img src="../img/insta.png" alt="Insta" id="insta">
+                    <img src="./img/insta.png" alt="Insta" id="insta">
                 </li>
                 <li>
                     <i class="fa-brands fa-twitter" id="tweet"></i>
