--- a/index.html
+++ b/index.html
@@ -21,40 +21,40 @@
             <label for="check" class="checkbtn">
                 <i class="fa-solid fa-bars"></i>
             </label>
-            <a class="logo" href="../index.html">AICTE</a>
+            <a class="logo" href="index.html">AICTE</a>
             <ul>
-                <li><a class="active" href="../index.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li class="dropdown">
-                    <a href="../National/national.html">National
+                    <a href="National/national.html">National
                         <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content">
-                        <a href="../Subject-wise/subject.html">Physics</a>
-                        <a href="../Subject-wise/subject.html">Mathematics</a>
-                        <a href="../Subject-wise/subject.html">Botony</a>
-                        <a href="../Subject-wise/subject.html">zoology</a>
-                        <a href="../Subject-wise/subject.html">human psychology</a>
-                        <a href="../Subject-wise/subject.html">History</a>
-                        <a href="../Subject-wise/subject.html">Astronomy</a>
+                        <a href="Subject-wise/subject.html">Physics</a>
+                        <a href="Subject-wise/subject.html">Mathematics</a>
+                        <a href="Subject-wise/subject.html">Botony</a>
+                        <a href="Subject-wise/subject.html">zoology</a>
+                        <a href="Subject-wise/subject.html">human psychology</a>
+                        <a href="Subject-wise/subject.html">History</a>
+                        <a href="Subject-wise/subject.html">Astronomy</a>
                     </div>
                 </li>
                 <li class="dropdown">
-                    <a href="../International/international.html">International
+                    <a href="International/international.html">International
                         <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content">
-                        <a href="../Subject-wise/subject.html">Physics</a>
-                        <a href="../Subject-wise/subject.html">Mathematics</a>
-                        <a href="../Subject-wise/subject.html">Botony</a>
-                        <a href="../Subject-wise/subject.html">zoology</a>
-                        <a href="../Subject-wise/subject.html">human psychology</a>
-                        <a href="../Subject-wise/subject.html">History</a>
-                        <a href="../Subject-wise/subject.html">Astronomy</a>
+                        <a href="Subject-wise/subject.html">Physics</a>
+                        <a href="Subject-wise/subject.html">Mathematics</a>
+                        <a href="Subject-wise/subject.html">Botony</a>
+                        <a href="Subject-wise/subject.html">zoology</a>
+                        <a href="Subject-wise/subject.html">human psychology</a>
+                        <a href="Subject-wise/subject.html">History</a>
+                        <a href="Subject-wise/subject.html">Astronomy</a>
                     </div>
                 </li>
-                <li><a href="new.html">Add Grant</a></li>
-                <li><a href="../Contact/contact.html">Contact</a></li>
-                <li><a href="../Feedback/feedback.html">Feedback</a></li>
+                <li><a href="Add_New_Grant/new.html">Add Grant</a></li>
+                <li><a href="Contact/contact.html">Contact</a></li>
+                <li><a href="Feedback/feedback.html">Feedback</a></li>
                 <li class="search-container">
                     <input type="text" placeholder="Search your Grant" name="search">
                     <button type="button"><i class="fa-solid fa-search"></i></button>
