--- a/index.html
+++ b/index.html
@@ -87,25 +87,53 @@
                 <div class="wrapper">
                     <div class="slider">
                         <div class="slider__item">
-                            <h2>Physics</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Physics</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>Mathematics</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Mathematics</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>Botony</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Botony</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>zoology</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Zoology</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>Psychology</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Psychology</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>History</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>History</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>Astronomy</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Astronomy</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -115,26 +143,53 @@
                 <div class="wrapper">
                     <div class="slider">
                         <div class="slider__item">
-                            <h2>Physics</h2>
-                            <img src="" alt="physics">
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Physics</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>Mathematics</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Mathematics</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>Botony</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Botony</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>zoology</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Zoology</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>Psychology</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Psychology</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>History</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>History</p>
+                            </div>
                         </div>
                         <div class="slider__item">
-                            <h2>Astronomy</h2>
+                            <div class="subject">
+                                <div class="circle">
+                                </div>
+                                <p>Astronomy</p>
+                            </div>
                         </div>
                     </div>
                 </div>
