--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/physics1.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Physics</p>
                             </div>
@@ -96,6 +97,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/maths.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Mathematics</p>
                             </div>
@@ -103,6 +105,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/botony.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Botony</p>
                             </div>
@@ -110,6 +113,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/zoology.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Zoology</p>
                             </div>
@@ -117,6 +121,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/psychology.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Psychology</p>
                             </div>
@@ -124,6 +129,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/history.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>History</p>
                             </div>
@@ -131,6 +137,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/astronomy.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Astronomy</p>
                             </div>
@@ -145,6 +152,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/physics1.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Physics</p>
                             </div>
@@ -152,6 +160,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/maths.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Mathematics</p>
                             </div>
@@ -159,6 +168,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/botony.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Botony</p>
                             </div>
@@ -166,6 +176,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/zoology.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Zoology</p>
                             </div>
@@ -173,6 +184,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/psychology.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Psychology</p>
                             </div>
@@ -180,6 +192,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/history.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>History</p>
                             </div>
@@ -187,6 +200,7 @@
                         <div class="slider__item">
                             <div class="subject">
                                 <div class="circle">
+                                    <img src="img/astronomy.png" alt="physics" style="width: 150px;height: 150px;">
                                 </div>
                                 <p>Astronomy</p>
                             </div>
