--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research Grants searching site</title>
+
+    <link rel = "icon" href = "img/logo.png" type = "image/x-icon">
+
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
     <!-- Slick Slider -->
     <link rel="stylesheet" href="./slick-slider/css/slick.css">
