--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Research Grants searching site</title>
 
-    <link rel = "icon" href = "img/logo.png" type = "image/x-icon">
+    <link rel = "icon" href = "img/logo.png" type = "image/x-icon" class = "icon">
 
     <script src="https://kit.fontawesome.com/6a059858c5.js" crossorigin="anonymous"></script>
     <!-- Slick Slider -->
