--- a/Grant_Page/grant.html
+++ b/Grant_Page/grant.html
@@ -62,59 +62,7 @@
 
     <main>
         <section>
-            <h1>Physics Research Grants</h1>
-            <ul class="grants">
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.1
-                    </h3>
-                </li>
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.2
-                    </h3>
-                </li>
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.3
-                    </h3>
-                </li>
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.4
-                    </h3>
-                </li>
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.5
-                    </h3>
-                </li>
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.6
-                    </h3>
-                </li>
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.7
-                    </h3>
-                </li>
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.8
-                    </h3>
-                </li>
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.9
-                    </h3>
-                </li>
-                <li>
-                    <h4 class="grant">
-                        Research Grant N0.10
-                    </h3>
-                </li>
-            </ul>
+            <h1>Grant's Page</h1>
         </section>
     </main>
 
