--- a/Subject-wise/subject.html
+++ b/Subject-wise/subject.html
@@ -67,52 +67,92 @@
                 <li>
                     <h4 class="grant">
                         Research Grant N0.1
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo1();"></i>
                     </h4>
+                    <p class="grant info" id="info1">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
                 <li>
                     <h4 class="grant">
                         Research Grant N0.2
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo2();"></i>
                     </h4>
+                    <p class="grant info" id="info2">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
                 <li>
                     <h4 class="grant">
                         Research Grant N0.3
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo3();"></i>
                     </h4>
+                    <p class="grant info" id="info3">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
                 <li>
                     <h4 class="grant">
                         Research Grant N0.4
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo4();"></i>
                     </h4>
+                    <p class="grant info" id="info4">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
                 <li>
                     <h4 class="grant">
                         Research Grant N0.5
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo5();"></i>
                     </h4>
+                    <p class="grant info" id="info5">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
                 <li>
                     <h4 class="grant">
                         Research Grant N0.6
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo6();"></i>
                     </h4>
+                    <p class="grant info" id="info6">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
                 <li>
                     <h4 class="grant">
                         Research Grant N0.7
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo7();"></i>
                     </h4>
+                    <p class="grant info" id="info7">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
                 <li>
                     <h4 class="grant">
                         Research Grant N0.8
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo8();"></i>
                     </h4>
+                    <p class="grant info" id="info8">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
                 <li>
                     <h4 class="grant">
                         Research Grant N0.9
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo9();"></i>
                     </h4>
+                    <p class="grant info" id="info9">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
                 <li>
                     <h4 class="grant">
                         Research Grant N0.10
+                        <i class="fa-solid fa-angle-down" id="checkbtn" onclick="displayInfo10();"></i>
                     </h4>
+                    <p class="grant info" id="info10">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio quasi possimus aperiam ratione dicta culpa quidem pariatur omnis dolorem sapiente! Est, veniam! Optio reiciendis delectus deserunt doloremque, ab facere. Quo voluptate, illum ea, blanditiis incidunt praesentium nobis perspiciatis, beatae impedit eos distinctio quibusdam ipsum in? Pariatur doloribus facere dolor eligendi?
+                    </p>
                 </li>
             </ul>
         </section>
@@ -152,6 +192,7 @@
             <p>Copyright ©  2022 - kvenkatamar. All Rights Reserved</p>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
